[gd_scene load_steps=5 format=3 uid="uid://dnont4ah22rn4"]

[ext_resource type="Script" path="res://scripts/TrackSelectionMenu.gd" id="1_btv2n"]
[ext_resource type="Texture2D" uid="uid://ds3usxld4lbwu" path="res://assets/arrow_left.png" id="1_eohgp"]
[ext_resource type="Texture2D" uid="uid://cisbr37tln45m" path="res://assets/arrow_right.png" id="2_jlf1q"]
[ext_resource type="Texture2D" uid="uid://bqloxqk22ebpc" path="res://assets/Game Icon.png" id="3_wa1jo"]

[node name="TrackSelectionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_btv2n")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 50

[node name="PreviousTrackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("1_eohgp")
icon_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
horizontal_scroll_mode = 3
vertical_scroll_mode = 3

[node name="TracksWrapper" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 6
theme_override_constants/separation = 100

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/TracksWrapper"]
layout_mode = 2
theme_override_constants/margin_left = 100
theme_override_constants/margin_right = 100

[node name="TextureRect" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/TracksWrapper"]
self_modulate = Color(0.975833, 2.18514e-05, 0.675695, 1)
layout_mode = 2
texture = ExtResource("3_wa1jo")

[node name="TextureRect2" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/TracksWrapper"]
self_modulate = Color(0, 0.662745, 0.0745098, 1)
layout_mode = 2
texture = ExtResource("3_wa1jo")

[node name="TextureRect3" type="TextureRect" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/TracksWrapper"]
self_modulate = Color(0.219462, 0.000115899, 0.719415, 1)
layout_mode = 2
texture = ExtResource("3_wa1jo")

[node name="MarginContainer2" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ScrollContainer/TracksWrapper"]
layout_mode = 2
theme_override_constants/margin_right = 100

[node name="NextTrackButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
icon = ExtResource("2_jlf1q")
icon_alignment = 1

[node name="SelectionButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SelectionMarker" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_left = 634.0
offset_top = 336.0
offset_right = 674.0
offset_bottom = 376.0

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/PreviousTrackButton" to="." method="_on_previous_track_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/NextTrackButton" to="." method="_on_next_track_button_pressed"]
